# sr_manipulation

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: README.md  ci-coverage-build.yml  ci-ros-lint.yml  humble-binary-build-main.yml  humble-binary-build-testing.yml  humble-rhel-binary-build.yml  humble-semi-binary-build-main.yml  humble-semi-binary-build-testing.yml  reusable-ros-tooling-source-build.yml
sr_manipulation_interfaces/: CMakeLists.txt  package.xml
sr_manipulation_interfaces/action/: Manip.action  PlanMoveTo.action
sr_manipulation_interfaces/msg/: ManipType.msg  MoveWaypoint.msg  ObjectDescriptor.msg  PlanExecState.msg  ServiceResult.msg
sr_manipulation_interfaces/srv/: AddObjects.srv  AttachDetachObject.srv  AttachObject.srv  DetachObject.srv  ExecuteJointTrajectory.srv  GetObjectPose.srv  MoveToPose.srv  MoveToPoseSeq.srv
sr_moveit2_utils/: CMakeLists.txt  package.xml  setup.cfg  setup.py
sr_moveit2_utils/launch/: moveit_client_node.launch.py  rviz2_node.launch.py
sr_moveit2_utils/sr_moveit2_utils/: __init__.py  move_client.py  moveit_client.py  robot_client_node legacy.py  robot_client_node.py  scene_manager.py  scene_manager_client.py  scene_manager_node.py
sr_moveit2_utils/sr_moveit2_utils/robot_client_modules/: machine_tending_client.py  moveit_client.py  scene_manager_client.py
